# ME-CFS-Research-Summaries

./: .gitignore  .prettierignore  LICENSE  README-de.md  README.md  all_summaries.md  package.json  pyproject.toml  quartz.config.ts  quartz.config.yaml  quartz.layout.ts  quartz.lock.json  quartz.ts
.github/workflows/: deploy.yml
agent/: fetch_emails.py  fetch_reddit.py  relevance_audit_agent.py  research_agent.py
agent-cli/: README.md  ingress.py  thread_content_rules.yaml
agent-cli/scripts/: consolidate_worker_reviews.py  extract_inventory.py  pre_filter.py  process_emails.py  stage_2_prepare.py  validate_thread_dates.py  youtube_video_summary.py
agent/prompts/: custom_gpt_system_prompt.md  inclusion_rules.md  relevance_audit_system.md  stage_1_input.md  stage_1_system.md  stage_2_input.md  stage_2_system.md  stage_3_input.md  stage_3_system.md  stage_4_input.md  stage_4_system.md  stage_5_input.md  stage_5_system.md  tagging_system.md
content/: imprint.md  index.md
content/diagnostics-symptoms-care/: index.md
content/disease-models-mechanisms/: index.md
content/summaries/: 2015-02-10_Beyond_Myalgic_EncephalomyelitisChronic_Fatigue_Syndrome_Redefining_an_Illness.md  2019-07-04_Post-Exertional_Malaise_Is_Associated_with_Hypermetabolism,_Hypoacetylation_and__bed7c54b.md  2020-02-06_An_Isolated_Complex_V_Inefficiency_and_Dysregulated_Mitochondrial_Function_in_Im_d3176f03.md  2021-01-01_NEUROCOGNITIVE_AND_NEUROLOGICAL_DISORDERS_ASSOCIAT.md  (+313 more)
pieces/intros/: einleitung.md  (+1 more)
posts/: hope.md
prompts/: alert_search_queries.md  gemini_artefacts.md  gemini_cite_regex.md  hope.md  roundup.md  summarizer-paper.md  summarizer-trial.md  translator.md  update_anchors.md
scripts/: compile_readme.py  split_readme.py
(+217 files in other folders)
