[tool.poetry]
name = "me-cfs-research-summaries"
version = "0.1.0"
description = "Semi-automated ME/CFS & Long COVID research summaries. Powered by custom Gemini agents aggregating the latest studies from PubMed, Google Scholar, and medRxiv."
authors = ["Hannes Ehringfeld <Hannes.Ehringfeld@gmail.com>"]
readme = "README.md"
homepage = "https://hanneseh.github.io/ME-CFS-Research-Summaries/"
repository = "https://github.com/hanneseh/ME-CFS-Research-Summaries"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.14.3"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
google-genai = "^1.56.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.10.1"
deptry = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"